Fix clipping on stream node header

--- a/src/server/static/streamnode.css
+++ b/src/server/static/streamnode.css
@@ -78,9 +78,9 @@ body {
 	color: var(--contrast_pilot_color);
 
 	font-size: 2.5rem;
-	line-height: 1;
-	padding: 0.25em;
-	height: 1em;
+	line-height: 1.5;
+	padding: 0 0.25em;
+	height: 1.5em;
 
 	position: absolute;
 	top: 0;
